--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,11 +4,15 @@
 
   height: 100%;
 
-  background-color: #e1e2ed;
+  background-image: url("https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .top-section{
-  background-color: aquamarine;
+  //background-color: aquamarine;
   text-align: center;
   padding: 100px 0;
 
@@ -27,12 +31,17 @@
 }
 
 .content-section{
-  background-color: cadetblue;
+  //background-color: cadetblue;
   flex-grow: 1;
 }
 
 .bottom-section{
-  background-color: coral;
+  //background-color: coral;
 
+  display: flex;
+
+  app-tabs{
+    margin: auto;
+  }
 }
 
